--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,103 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #d9d9d9;
+  font-family: 'Source Code Pro', monospace;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+h1 {
+  text-align: center;
+}
+#display {
+  grid-area: display;
+  align-self: end;
+  color: white;
+}
+#result {
+  grid-area: result;
+  align-self: end;
+  color: white;
+  font-size: 1.2em;
+}
+#clear {
+  grid-area: ac;
+  background-color: #778da9;
+  color: white;
+  font-size: 1.2em;
+}
+#divide {
+  grid-area: divide;
+}
+#multiply {
+  grid-area: mly;
+}
+#seven {
+  grid-area: seven;
+}
+#eight {
+  grid-area: eight;
+}
+#nine {
+  grid-area: nine;
+}
+#subtract {
+  grid-area: stract;
+}
+#four {
+  grid-area: four;
+}
+#five {
+  grid-area: five;
+}
+#six {
+  grid-area: six;
+}
+#add {
+  grid-area: plus;
+}
+#one {
+  grid-area: one;
+}
+#two {
+  grid-area: two;
+}
+#three {
+  grid-area: three;
+}
+#zero {
+  grid-area: null;
+}
+#decimal {
+  grid-area: deci;
+}
+#equals {
+  grid-area: equals;
+  background-color: #778da9;
+  color: white;
+}
+.container {
+  background-color: #1b263b;
+  width: 200px;
+  margin: auto;
+  display: grid;
+  justify-content: center;
+  grid-template-rows: repeat(7, 50px);
+  grid-template-columns: repeat(4, 50px);
+  grid-template-areas:
+    "display display display display"
+    "result result result result"
+    "ac ac equals equals"
+    "seven eight nine plus"
+    "four five six stract"
+    "one two three mly"
+    "null null deci divide";
+}
+button {
+  background-color: #415a77;
+  color: white;
+  font-size: 1.6em;
 }
